Updated UI with new design theme

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <title>Shyam Sudhakar - Home</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
+    <button onclick="toggleDarkMode()">Dark Mode</button>
+
 </head>
 <body>
     <header>
