--- a/index.html
+++ b/index.html
@@ -6,9 +6,7 @@
     <title>Shyam Sudhakar - Home</title>
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
-    <button onclick="toggleDarkMode()">Dark Mode</button>
-
-</head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <body>
     <header>
         <h1>Welcome to the Computational Brain Pathologies Lab</h1>
@@ -28,29 +26,113 @@
         <p>I aim to understand the cellular, molecular, and network-level mechanisms underlying pathological brain states through biophysically detailed computational modeling. I am interested in studying traumatic brain injuries (TBI) with the aim of identifying novel drugs for neuroprotection and computational biomarkers of injury severity and disease progression.</p>
     </section>
     
-    <section class="content">
-        <h2>Recent Publication:</h2>
-        <p>(Click on the image)</p>
-        <a href="https://www.sciencedirect.com/science/article/pii/S2949921624000024"><img src="images/thumbnail.png" alt="Recent publication" class="publication-img"></a>
-    </section>
+<style>
+  .content {
+    text-align: center;
+    margin: 40px 0;
+  }
+
+  .content h2 {
+    font-size: 1.5em;
+    margin-bottom: 0.3em;
+  }
+
+  .content p {
+    font-size: 0.9em;
+    color: #333;
+    margin-bottom: 10px;
+  }
+
+  .publication-img {
+    max-width: 500px;
+    width: 100%;
+    height: auto;
+    border: 2px solid #000; /* Optional for nice framing */
+    border-radius: 5px;
+    transition: transform 0.3s;
+  }
+
+  .publication-img:hover {
+    transform: scale(1.03);
+    cursor: pointer;
+  }
+</style>
+
+<section class="content">
+  <h2>Recent Publication:</h2>
+  <p>(Click on the image)</p>
+  <a href="https://www.sciencedirect.com/science/article/pii/S2949921624000024" target="_blank" rel="noopener noreferrer">
+    <img src="images/thumbnail.png" alt="Recent publication" class="publication-img">
+  </a>
+</section>
+
 
     <footer>
-        <div class="contact">
-            📞 +91 8015920041 | 📞 +1 (734) 709-6849 <br>
-            📧 <a class="email-link" href="mailto:shyamkumar.sudhakar@krea.edu.in">shyamkumar.sudhakar@krea.edu.in</a>
-        </div>
-        <div class="social-icons">
-            <a href="https://scholar.google.com/citations?user=Zm7WsIsAAAAJ" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar" height="30px" width="30px">
-            </a>
-            <a href="https://www.linkedin.com/in/shyam-kumar-sudhakar-6b953118a/" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" height="30px" width="30px">
-            </a>
-            <a href="https://www.researchgate.net/profile/Shyam-Sudhakar-4" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate" height="30px" width="30px">
-            </a>
-        </div>
-        <p>&copy; 2025 Shyam Sudhakar. All Rights Reserved.</p>
-    </footer>
+            <div class="footer-top">
+        <div class="footer-container">
+          <div class="footer-section">
+            <img src="Krea Logo.png" alt="KRea Logo" class="footer-logo" />
+            <p>Krea University, 5655<br>Central Expressway, Chittoor <br>Andhra Pradesh, Sricity - 517541</p>
+          </div>
+          <div class="footer-section">
+
+           <style>
+  .social-follow-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; /* Align to the left, change to center if needed */
+    gap: 10px;
+    margin-top: 20px;
+  }
+
+  .social-follow-container h4 {
+    margin: 0;
+  }
+
+  .social-icons {
+    display: flex;
+    gap: 15px;
+    font-size: 24px;
+  }
+
+  .social-icons a {
+    color: #000;
+    transition: color 0.3s;
+  }
+
+  .social-icons a:hover {
+    color: #0077b5;
+  }
+</style>
+
+<div class="social-follow-container">
+  <h4>Follow Dr. Shyam Kumar Sudhakar</h4>
+  <div class="social-icons">
+    <a href="https://scholar.google.com/citations?user=Zm7WsIsAAAAJ" target="_blank" title="Google Scholar">
+      <i class="fas fa-graduation-cap"></i>
+    </a>
+    <a href="https://www.researchgate.net/profile/Shyam-Sudhakar-4" target="_blank" title="ResearchGate">
+      <i class="fab fa-researchgate"></i>
+    </a>
+    <a href="https://www.linkedin.com/in/shyam-kumar-sudhakar-6b953118a/" target="_blank" title="LinkedIn">
+      <i class="fab fa-linkedin-in"></i>
+    </a>
+    <a href="mailto:shyamkumar.sudhakar@krea.edu.in" target="_blank" title="Email">
+      <i class="fas fa-envelope"></i>
+    </a>
+  </div>
+</div>
+
+    
+      <script src="script.js"></script>
+      <!-- AOS Animation -->
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+<script>
+  AOS.init({
+    duration: 1000,
+    once: true
+  });
+</script>
 </body>
 </html>
