--- a/teaching.html
+++ b/teaching.html
@@ -1,63 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Shyam Sudhakar - Teaching</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js"></script>
-
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Shyam Sudhakar - Teaching</title>
+  <link rel="stylesheet" href="styles.css" />
+  <script src="script.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
 </head>
 <body>
-    <header>
-        <h1>Shyam Sudhakar</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="research.html">Research</a></li>
-                <li><a href="publications.html">Publications</a></li>
-                <li><a href="teaching.html">Teaching</a></li>
-                <li><a href="news.html">News</a></li>
-            </ul>
-        </nav>
-    </header>
-    
-    <section class="hero">
-        <h2>Teaching</h2>
-        <p>Engaging students in the fields of computational neuroscience and biomedical engineering.</p>
-    </section>
-    
-    <section class="content">
-        <h2>Courses Taught</h2>
-        <ul>
-            <li><strong>Form and Function </strong> - T7/2021-22</li>
-            <li><strong>Brain & Behavior </strong>- T4/2021-22</li>
-            <li><strong>Intro to Computational Thinking</strong> - T3/2022</li>
-            <li><strong>Life at Different Scales </strong>- T4/2022</li>
-            <li><strong>Intro to Human Brain and Mind</strong> - T6/2023</li>
-            <li><strong>Python for Data Science </strong>- T3/2023 & T3/2024</li>
-            <li><strong>Intro to Data Science </strong>- T4/2023</li>
-        </ul>
-        <h3>Teaching Philosophy</h3>
-        <p>Dr. Shyam Sudhakar believes in a hands-on, research-oriented approach to teaching, fostering curiosity and critical thinking in students.</p>
-    </section>
+  <header>
+    <h1>Welcome to the Computational Brain Pathologies Lab</h1>
+    <nav>
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="research.html">Research</a></li>
+        <li><a href="publications.html">Publications</a></li>
+        <li><a href="teaching.html">Teaching</a></li>
+        <li><a href="news.html">News</a></li>
+      </ul>
+    </nav>
+  </header>
 
-    <footer>
-        <div class="contact">
-            📞 +91 8015920041 | 📞 +1 (734) 709-6849 <br>
-            📧 <a class="email-link" href="mailto:shyamkumar.sudhakar@krea.edu.in">shyamkumar.sudhakar@krea.edu.in</a>
+  <section class="research-section">
+    <h2 class="section-title">Teaching</h2>
+    <p style="text-align: center; font-size: 1.1rem;">Engaging students in the fields of computational neuroscience and biomedical engineering.</p>
+
+    <div class="experience-grid">
+      <div class="exp-card">
+        <h3><i class="fas fa-book-reader"></i> Courses Taught</h3>
+        <ul>
+          <li>Form and Function - T7/2021-22</li>
+          <li>Brain & Behavior - T4/2021-22</li>
+          <li>Intro to Computational Thinking - T3/2022</li>
+          <li>Life at Different Scales - T4/2022</li>
+          <li>Intro to Human Brain and Mind - T6/2023</li>
+          <li>Python for Data Science - T3/2023 & T3/2024</li>
+          <li>Intro to Data Science - T4/2023</li>
+        </ul>
+      </div>
+
+      <div class="exp-card">
+        <h3><i class="fas fa-chalkboard"></i> Teaching Philosophy</h3>
+        <p>Dr. Shyam Sudhakar believes in a hands-on, research-oriented approach to teaching, fostering curiosity and critical thinking in students.</p>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <div class="footer-top">
+      <div class="footer-container">
+                   <style>
+  .social-follow-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; /* Align to the left, change to center if needed */
+    gap: 10px;
+    margin-top: 20px;
+  }
+
+  .social-follow-container h4 {
+    margin: 0;
+  }
+
+  .social-icons {
+    display: flex;
+    gap: 15px;
+    font-size: 24px;
+  }
+
+  .social-icons a {
+    color: #000;
+    transition: color 0.3s;
+  }
+
+  .social-icons a:hover {
+    color: #0077b5;
+  }
+</style>
+        <div class="footer-section">
+          <img src="Krea Logo.png" alt="KRea Logo" class="footer-logo" />
+          <p>Krea University, 5655<br>Central Expressway, Chittoor <br>Andhra Pradesh, Sricity - 517541</p>
         </div>
-        <div class="social-icons">
-            <a href="https://scholar.google.com/citations?user=Zm7WsIsAAAAJ" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/c/c7/Google_Scholar_logo.svg" alt="Google Scholar" height="30px" width="30px">
-            </a>
-            <a href="https://www.linkedin.com/in/shyam-kumar-sudhakar-6b953118a/" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/c/ca/LinkedIn_logo_initials.png" alt="LinkedIn" height="30px" width="30px">
-            </a>
-            <a href="https://www.researchgate.net/profile/Shyam-Sudhakar-4" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/ResearchGate_icon_SVG.svg" alt="ResearchGate" height="30px" width="30px">
-            </a>
-        <p>&copy; 2025 Shyam Sudhakar. All Rights Reserved.</p>
-    </footer>
+        <div class="footer-section">
+          <div class="social-follow-container">
+            <h4>Follow Dr. Shyam Kumar Sudhakar</h4>
+            <div class="social-icons">
+              <a href="https://scholar.google.com/citations?user=Zm7WsIsAAAAJ" target="_blank" title="Google Scholar">
+                <i class="fas fa-graduation-cap"></i>
+              </a>
+              <a href="https://www.researchgate.net/profile/Shyam-Sudhakar-4" target="_blank" title="ResearchGate">
+                <i class="fab fa-researchgate"></i>
+              </a>
+              <a href="https://www.linkedin.com/in/shyam-kumar-sudhakar-6b953118a/" target="_blank" title="LinkedIn">
+                <i class="fab fa-linkedin-in"></i>
+              </a>
+              <a href="mailto:shyamkumar.sudhakar@krea.edu.in" target="_blank" title="Email">
+                <i class="fas fa-envelope"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <p>&copy; 2025 Dr. Shyam Kumar Sudhakar. All Rights Reserved.</p>
+  </footer>
+
+  <script src="script.js"></script>
+  <!-- AOS Animation -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+  <script>
+    AOS.init({
+      duration: 1000,
+      once: true
+    });
+  </script>
 </body>
 </html>
