Updated research experience and reordered publications section

--- a/public/index.html
+++ b/public/index.html
@@ -65,8 +65,9 @@
 <section class="content">
   <h2>Recent Publication:</h2>
   <p>(Click on the image)</p>
-  <a href="https://www.sciencedirect.com/science/article/pii/S2949921624000024" target="_blank" rel="noopener noreferrer">
-<img src="/public/images/Recent_Publications.png" alt="Recent publication" class="publication-img">
+  <a href="https://bmcneurol.biomedcentral.com/articles/10.1186/s12883-025-04102-x" target="_blank" rel="noopener noreferrer">
+<img src="images/Recent_Publications.png" alt="Recent publication" class="publication-img">
+
   </a>
 </section>
 
