--- a/public/publications.html
+++ b/public/publications.html
@@ -63,87 +63,87 @@
   <div class="experience-grid">
 
     <div class="exp-card">
-      <p><strong>1.</strong> Diaz, M.R., Wadleigh, A., Sudhakar, S.K., De Schutter, E., Valenzuela, C.F. (2013). 
-      <em>Na+/K+-ATPase Inhibition Partially Mimics the Ethanol-Induced Increase of the Golgi Cell-Dependent Component of the Tonic GABAergic Current in Rat Cerebellar Granule Cells</em>. 
-      <strong>PLoS One</strong>, 8, e55673.</p>
+      <p><strong>1.</strong> Sudhakar, S.K., Doshi, D., Nair, G., Rao, T. (2025). 
+      <em>Investigating Health Literacy and Sociodemographic Factors among College Students</em>. 
+      <strong>Nature Scientific Reports</strong>, 15:20455.</p>
     </div>
 
     <div class="exp-card">
-      <p><strong>2.</strong> Sudhakar, S.K., Torben-Nielsen, B., De Schutter, E. (2015). 
-      <em>Cerebellar nuclear neurons use time and rate coding to transmit Purkinje neuron pauses</em>. 
-      <strong>PLoS Computational Biology</strong>, 11, e1004641.</p>
+      <p><strong>2.</strong> Mehta, K., Sudhakar, S.K. (2025). 
+      <em>Exploring Comorbidity Networks in Mild Traumatic Brain Injury Subjects through Graph Theory: A Traumatic Brain Injury Model Systems Study</em>. 
+      <strong>BMC Neurology</strong>, 25:94.</p>
     </div>
 
     <div class="exp-card">
-      <p><strong>3.</strong> Sudhakar, S.K., et al. (2017). 
-      <em>Spatiotemporal network coding of physiological mossy fiber inputs by the cerebellar granular layer</em>. 
-      <strong>PLoS Computational Biology</strong>, 13, e1005754.</p>
+      <p><strong>3.</strong> Sudhakar, S.K., Mehta, M. (2024). 
+      <em>Charting Paths to Recovery: Navigating Traumatic Brain Injury Comorbidities through Graph Theory - Exploring Benefits and Challenges</em>. 
+      <strong>Brain Organoid and Systems Neuroscience</strong>, 2:10–16. [Invited article by the Editor in Chief]</p>
     </div>
 
     <div class="exp-card">
-      <p><strong>4.</strong> Hill, M., et al. (2018). 
-      <em>Quantitative simulation of extracellular single unit recording from the surface of cortex</em>. 
-      <strong>Journal of Neural Engineering</strong>, 15, 56007.</p>
+      <p><strong>4.</strong> Sudhakar, S.K., Sridhar, S., Char, S., Pandya, K., Mehta, K. (2023). 
+      <em>Prevalence of comorbidities post mild traumatic brain injuries: a traumatic brain injury model systems study</em>. 
+      <strong>Frontiers in Human Neuroscience</strong>, 17:1158483.</p>
     </div>
 
     <div class="exp-card">
-      <p><strong>5.</strong> Sudhakar, S.K., Choi, T.J., Ahmed, O.J. (2019). 
-      <em>Biophysical Modeling Suggests Optimal Drug Combinations for Improving the Efficacy of GABA Agonists after Traumatic Brain Injuries</em>. 
-      <strong>Journal of Neurotrauma</strong>, 36, 1–14.</p>
+      <p><strong>5.</strong> Sudhakar, S.K. (2023). 
+      <em>Are GABAergic drugs beneficial in providing neuroprotection after traumatic brain injuries? A comprehensive literature review of preclinical studies</em>. 
+      <strong>Frontiers in Neurology</strong>, 14:1109406.</p>
     </div>
 
     <div class="exp-card">
-      <p><strong>6.</strong> Ahmed, O.J., Sudhakar, S.K. (2019). 
-      <em>High frequency activity during stereotyped low frequency events might help to identify the seizure onset zone</em>. 
-      <strong>Epilepsy Currents</strong>, 19(3):184-186.</p>
+      <p><strong>6.</strong> Brennan, E.W.*, Jedrasiak-Cape, I.*, Kailasa, S., Rice, S.P., Sudhakar, S.K., Ahmed, O.J. (2021). 
+      <em>Thalamus and claustrum control parallel layer 1 circuits in retrosplenial cortex</em>. 
+      <strong>eLife</strong>, 10:e62207.</p>
     </div>
 
     <div class="exp-card">
-      <p><strong>7.</strong> Brennan, E.W*, Sudhakar, S.K*., et al. (2020). 
+      <p><strong>7.</strong> Brennan, E.W.*, Sudhakar, S.K*., Jedrasiak-Cape, I., John, T.T., Ahmed, O.J. (2020). 
       <em>Hyperexcitable neurons enable precise and persistent encoding in the superficial retrosplenial cortex</em>. 
       <strong>Cell Reports</strong>, 30:1598–1612. *Co-first authors</p>
     </div>
 
     <div class="exp-card">
       <p><strong>8.</strong> Sudhakar, S.K., Ahmed, O.J. (2019). 
-      <em>More is more: potential benefits of characterizing high frequency activity over long durations</em>. 
+      <em>More is more: potential benefits of characterizing high-frequency activity over long durations</em>. 
       <strong>Epilepsy Currents</strong>, 19(6):397–399.</p>
     </div>
 
     <div class="exp-card">
-      <p><strong>9.</strong> Brennan, E.W., et al. (2021). 
-      <em>Thalamus and claustrum control parallel layer 1 circuits in retrosplenial cortex</em>. 
-      <strong>eLife</strong>, 10:e62207.</p>
+      <p><strong>9.</strong> Sudhakar, S.K., Choi, T.J., Ahmed, O.J. (2019). 
+      <em>Biophysical Modeling Suggests Optimal Drug Combinations for Improving the Efficacy of GABA Agonists after Traumatic Brain Injuries</em>. 
+      <strong>Journal of Neurotrauma</strong>, 36, 1–14.</p>
     </div>
 
     <div class="exp-card">
-      <p><strong>10.</strong> Sudhakar, S.K., et al. (2023). 
-      <em>Prevalence of comorbidities post mild traumatic brain injuries</em>. 
-      <strong>Frontiers in Human Neuroscience</strong>, 17:1158483.</p>
+      <p><strong>10.</strong> Ahmed, O.J., Sudhakar, S.K. (2019). 
+      <em>High-frequency activity during stereotyped low-frequency events might help to identify the seizure onset zone</em>. 
+      <strong>Epilepsy Currents</strong>, 19(3):184–186.</p>
     </div>
 
     <div class="exp-card">
-      <p><strong>11.</strong> Sudhakar, S.K. (2023). 
-      <em>Are GABAergic drugs beneficial in providing neuroprotection after traumatic brain injuries?</em> 
-      <strong>Frontiers in Neurology</strong>, 14:1109406.</p>
+      <p><strong>11.</strong> Hill, M., Rios, E., Sudhakar, S.K., Roossien, D.H., Caldwell, C., Cai, D., Ahmed, O.J., Lempka, S.F., Chestek, C.A. (2018). 
+      <em>Quantitative simulation of extracellular single unit recording from the surface of cortex</em>. 
+      <strong>Journal of Neural Engineering</strong>, 15, 56007.</p>
     </div>
 
     <div class="exp-card">
-      <p><strong>12.</strong> Sudhakar, S.K., Mehta, M. (2024). 
-      <em>Charting Paths to Recovery: Navigating Traumatic Brain Injury Comorbidities through Graph Theory</em>. 
-      <strong>Brain Organoid and Systems Neuroscience</strong>, 2:10–16. [Invited article]</p>
+      <p><strong>12.</strong> Sudhakar, S.K., Hong, S., Raikov, I., Publio, R., Lang, C., Close, T., Guo, D., Negrello, M., De Schutter, E. (2017). 
+      <em>Spatiotemporal network coding of physiological mossy fiber inputs by the cerebellar granular layer</em>. 
+      <strong>PLoS Computational Biology</strong>, 13, e1005754.</p>
     </div>
 
     <div class="exp-card">
-      <p><strong>13.</strong> Sudhakar, S.K., Doshi, D., Nair, G. (2024). 
-      <em>Health literacy and its sociodemographic determinants among college students</em>. 
-      <strong>Nature Scientific Reports</strong> [Accepted]</p>
+      <p><strong>13.</strong> Sudhakar, S.K., Torben-Nielsen, B., De Schutter, E. (2015). 
+      <em>Cerebellar nuclear neurons use time and rate coding to transmit Purkinje neuron pauses</em>. 
+      <strong>PLoS Computational Biology</strong>, 11, e1004641.</p>
     </div>
 
     <div class="exp-card">
-      <p><strong>14.</strong> Mehta, K., Sudhakar, S.K. (2025). 
-      <em>Exploring Comorbidity Networks in Mild Traumatic Brain Injury Subjects through Graph Theory</em>. 
-      <strong>BMC Neurology</strong>, 25:94.</p>
+      <p><strong>14.</strong> Diaz, M.R., Wadleigh, A., Sudhakar, S.K., De Schutter, E., Valenzuela, C.F. (2013). 
+      <em>Na+/K+-ATPase Inhibition Partially Mimics the Ethanol-Induced Increase of the Golgi Cell-Dependent Component of the Tonic GABAergic Current in Rat Cerebellar Granule Cells</em>. 
+      <strong>PLoS One</strong>, 8, e55673.</p>
     </div>
 
   </div>
