--- a/public/research.html
+++ b/public/research.html
@@ -66,55 +66,45 @@
     <div class="exp-card">
       <h3><i class="fas fa-chalkboard-teacher"></i> July 2025 – Present</h3>
       <p><strong>Associate Professor</strong>, Krea University, India<br>
-      Focused on computational modeling of pathological brain states. Current work includes:
-      <ul>
-        <li>EEG-based biomarkers for mental health</li>
-        <li>Application of graph theory to analyze comorbidities after Traumatic Brain Injuries (TBIs)</li>
-        <li>Understanding brain function across socioeconomic groups</li>
-      </ul>
+      Computational modeling of pathological brain states, EEG-based biomarkers for mental health, Application of graph theory for understanding comorbidities after Traumatic Brain Injuries (TBIs).
       </p>
     </div>
 
     <div class="exp-card">
       <h3><i class="fas fa-chalkboard-teacher"></i> July 2021 – June 2025</h3>
-      <p><strong>Assistant Professor</strong>, Krea University, India<br>
-      Led projects involving:
-      <ul>
-        <li>Computational modeling of brain trauma using the TBIMS database</li>
-        <li>Identification of psychiatric biomarkers using EEG/ECG data</li>
-      </ul>
-      </p>
+      <p><strong>Assistant Professor</strong>, Krea University, India</p>
     </div>
 
     <div class="exp-card">
       <h3><i class="fas fa-brain"></i> 2020 – 2021</h3>
       <p><strong>Postdoctoral Researcher</strong>, Blue Brain Project, EPFL, Switzerland<br>
-      Worked on the digital reconstruction of the mouse hippocampus under Prof. Henry Markram.
+      Digital reconstruction of the mouse hippocampus.
       </p>
     </div>
 
     <div class="exp-card">
       <h3><i class="fas fa-microscope"></i> 2016 – 2020</h3>
-      <p><strong>Postdoctoral Fellow</strong>, University of Michigan, Ann Arbor, USA<br>
-      Focused on biophysical and multiscale modeling of traumatic brain injury (TBI) and seizure dynamics in Prof. Omar J. Ahmed’s laboratory.
+      <p><strong>Postdoctoral Fellow</strong>, University of Michigan, Ann Arbor<br>
+      Biophysical modeling of TBIs, seizure dynamics, and multi-scale modeling.
       </p>
     </div>
 
     <div class="exp-card">
       <h3><i class="fas fa-laptop-code"></i> 2011 – 2015</h3>
       <p><strong>PhD Student</strong>, Okinawa Institute of Science and Technology (OIST), Japan<br>
-      Conducted large-scale simulations of cerebellar cortical processing under the supervision of Prof. Erik De Schutter.
+      Large-scale simulations of cerebellar cortical processing.
       </p>
     </div>
 
   </div>
 </section>
+
     <div class="research-columns">
      <div class="exp-card" style="max-width: 600px; margin: 30px auto; text-align: center;">
   <h2>Research Profile</h2>
   <ul style="list-style: none; padding-left: 0;">
     <li><a href="https://scholar.google.com/citations?user=Zm7WsIsAAAAJ&hl=en" target="_blank">Google Scholar</a></li>
-    <li><a href="https://senselab.med.yale.edu/modeldb/searchFulltext?g=sudhakar" target="_blank">Model DB (Yale)</a></li>
+    <li><a href="https://modeldb.science/implementers/Sudhakar,%20Shyam%20Kumar%20%5Bshyamk%20at%20umich.edu%5D" target="_blank">Model DB (Yale)</a></li>
     <li><a href="https://www.researchgate.net/profile/Shyam-Sudhakar-4" target="_blank">ResearchGate</a></li>
   </ul>
 </div>
